# rust-mcp-servers

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
chat-cli/: FEATURES.md  README.md  index.ts  mcp-config.json  package.json
crates/fetch_mcp/: Cargo.toml  LICENSE  README.md
crates/fetch_mcp/src/: main.rs  server.rs
crates/fetch_mcp/src/errors/: fetch_error.rs  mod.rs
crates/fetch_mcp/src/models/: fetch_prompt_args.rs  fetch_request.rs  mod.rs
crates/fetch_mcp/src/services/: fetch_service.rs  mod.rs  validation.rs
crates/fetch_mcp/src/utils/: html_utils.rs  http_client.rs  mod.rs  robots_utils.rs
crates/fs_mcp/: Cargo.toml  LICENSE  README.md
crates/fs_mcp/src/: main.rs
crates/fs_mcp/src/application/: file_reader_service.rs  file_service.rs  file_writer_service.rs  mod.rs
crates/fs_mcp/src/cli/: mod.rs
crates/fs_mcp/src/config/: mod.rs
crates/fs_mcp/src/domain/: file_operations.rs  file_reader.rs  file_writer.rs  mod.rs
crates/fs_mcp/src/errors/: mod.rs
crates/fs_mcp/src/handlers/: fs_tools.rs  mod.rs
crates/fs_mcp/src/models/: requests.rs  responses.rs
crates/fs_mcp/src/models/requests/: mod.rs  read_text_file.rs
crates/fs_mcp/src/service/: fs.rs  mod.rs  validation.rs
crates/fs_mcp/src/utils/: fs.rs  logging.rs  mod.rs  path.rs
crates/fs_mcp/tests/: integration_tests.rs
crates/sleep_mcp/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/sleep_mcp/examples/: basic_usage.rs  claude_desktop_config.json  mcp_client_example.json  usage_examples.md
crates/sleep_mcp/src/: main.rs  server.rs
crates/sleep_mcp/src/core/: error.rs  mod.rs  models.rs  provider.rs  task_manager.rs  utils.rs
crates/time_mcp/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/time_mcp/examples/: claude_desktop_config.json  usage_examples.md
crates/time_mcp/src/: main.rs  server.rs
crates/time_mcp/src/core/: error.rs  mod.rs  models.rs  provider.rs  utils.rs
