[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.64"
assert_cmd = "2.0.17"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = "4.5.47"
derive-getters = "0.5.0"
dirs = "6.0.0"
iana-time-zone = "0.1.64"
predicates = "3.1.3"
rmcp = "0.6.4"
serde = "1.0.219"
serde_json = "1.0.143"
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

mcp_server_time = { path = "crates/time_mcp" }
mcp_server_filesystem = { path = "crates/fs_mcp" }
