[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
assert_cmd = "2.0.17"
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = "4.5.48"
derive-getters = "0.5.0"
dirs = "6.0.0"
futures = "0.3.31"
globset = "0.4.16"
iana-time-zone = "0.1.64"
mime = "0.3.17"
mime_guess = "2.0.5"
predicates = "3.1.3"
reqwest = "0.12.23"
rmcp = "0.6.4"
serde = "1.0.226"
serde_json = "1.0.145"
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-test = "0.4.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"

mcp_server_time = { path = "crates/time_mcp" }
mcp_server_filesystem = { path = "crates/fs_mcp" }
mcp_server_fetch = { path = "crates/fetch_mcp" }
