[package]
name = "mcp-server-sleep"
version = "0.1.0"
edition = "2021"
authors = ["Sabry Awad <dr.sabry1997@gmail.com>"]
description = "A Model Context Protocol (MCP) server for sleep and delay operations"
documentation = "https://docs.rs/mcp-server-sleep"
readme = "README.md"
homepage = "https://github.com/sabry-awad97/rust-mcp-servers"
repository = "https://github.com/sabry-awad97/rust-mcp-servers"
license = "MIT"
keywords = ["mcp", "sleep", "delay", "server", "protocol"]
categories = ["command-line-utilities", "web-programming", "asynchronous"]
exclude = ["target/", "*.log", ".env"]

[[bin]]
name = "mcp-server-sleep"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
rmcp = { workspace = true, features = ["transport-io", "server", "schemars"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
