[package]
name = "mcp_server_time"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp_server_time"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
iana-time-zone = { workspace = true }
rmcp = { workspace = true, features = ["transport-io", "server", "schemars"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
